fixed issue with db not showing up. last minute like usual

--- a/static/zoey.css
+++ b/static/zoey.css
@@ -458,3 +458,7 @@ padding-left: 5px; padding-right:5px;
     padding:5px;
 }
 
+#search-form {
+    display:flex;
+    align-items:center;
+}
